Add basic structur in script.js file

--- a/Game/index.html
+++ b/Game/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script type="text/javascript" src="phaser.min.js"></script>
 
+    <script type="text/javascript" src="script.js"></script>
+
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Game</title>
 </head>
