--- a/Game/index.html
+++ b/Game/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script type="text/javascript" src="phaser.min.js"></script>
-
-    <script type="text/javascript" src="script.js"></script>
     
+
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Game</title>
 </head>
 <body>
-
+    <script type="text/javascript" src="phaser.min.js"></script>
+    <script src="https://unpkg.com/mitt/dist/mitt.umd.js"></script>
+    <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
