add resize function

--- a/Game/index.html
+++ b/Game/index.html
@@ -11,6 +11,9 @@
     <title>Game</title>
 </head>
 <body>
+  <canvas>
+
+  </canvas>
     <script type="text/javascript" src="phaser.min.js"></script>
     <script src="https://unpkg.com/mitt/dist/mitt.umd.js"></script>
     <script type="text/javascript" src="script.js"></script>
